--- a/DataManager/DataManagerUserInterface/DataManagerUserInterface.csproj
+++ b/DataManager/DataManagerUserInterface/DataManagerUserInterface.csproj
@@ -75,11 +75,11 @@
     <Compile Include="GeneralUsage\ChangeMasterPassword.Designer.cs">
       <DependentUpon>ChangeMasterPassword.cs</DependentUpon>
     </Compile>
-    <Compile Include="DataBreach\CheckDataBreaches.cs">
+    <Compile Include="DataBreach\CheckTextBoxDataBreaches.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="DataBreach\CheckDataBreaches.Designer.cs">
-      <DependentUpon>CheckDataBreaches.cs</DependentUpon>
+    <Compile Include="DataBreach\CheckTextBoxDataBreaches.Designer.cs">
+      <DependentUpon>CheckTextBoxDataBreaches.cs</DependentUpon>
     </Compile>
     <Compile Include="DataBreach\DataBreachesResult.cs">
       <SubType>UserControl</SubType>
@@ -242,8 +242,8 @@
     <EmbeddedResource Include="UserPasswordPair\AddUserPasswordPair.resx">
       <DependentUpon>AddUserPasswordPair.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="DataBreach\CheckDataBreaches.resx">
-      <DependentUpon>CheckDataBreaches.cs</DependentUpon>
+    <EmbeddedResource Include="DataBreach\CheckTextBoxDataBreaches.resx">
+      <DependentUpon>CheckTextBoxDataBreaches.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DataBreach\DataBreachesResult.resx">
       <DependentUpon>DataBreachesResult.cs</DependentUpon>
