--- a/DataManager/DataManagerDomain/DataManagerDomain.csproj
+++ b/DataManager/DataManagerDomain/DataManagerDomain.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Category.cs" />
+    <Compile Include="DataBreach.cs" />
     <Compile Include="NormalCategory.cs" />
     <Compile Include="Exceptions\ExceptionCategoryAlreadyExists.cs" />
     <Compile Include="Exceptions\ExceptionCategoryNotExists.cs" />
