--- a/DataManager/DataManagerDomain/App.config
+++ b/DataManager/DataManagerDomain/App.config
@@ -4,21 +4,13 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.1.0" newVersion="4.0.1.0" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
   <entityFramework>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-	<!--<connectionStrings>
+	<connectionStrings>
 		<add name="DataManagerContext"
-			 connectionString="Data Source=.\SQLEXPRESS;Integrated Security=SSPI;Initial Catalog=DataManagerTest;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
-	</connectionStrings>-->
+			 connectionString="Data Source=.\SQLEXPRESS;Integrated Security=SSPI;Initial Catalog=DataManager;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+	</connectionStrings>
 </configuration>
