--- a/DataManager/DataManagerDomain/DataManagerDomain.csproj
+++ b/DataManager/DataManagerDomain/DataManagerDomain.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Category.cs" />
     <Compile Include="DataBreach.cs" />
+    <Compile Include="DataManagerContext.cs" />
     <Compile Include="Encrypter.cs" />
     <Compile Include="NormalCategory.cs" />
     <Compile Include="Exceptions\ExceptionCategoryAlreadyExists.cs" />
