persistence without data breaches

--- a/DataManager/DataManagerTest/app.config
+++ b/DataManager/DataManagerTest/app.config
@@ -17,8 +17,8 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-	<!--<connectionStrings>
+	<connectionStrings>
 		<add name="DataManagerContext"
 			 connectionString="Data Source=.\SQLEXPRESS;Integrated Security=SSPI;Initial Catalog=DataManagerTest;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
-	</connectionStrings>-->
+	</connectionStrings>
 </configuration>
