--- a/DataManager/DataManagerDomain/DataManagerDomain.csproj
+++ b/DataManager/DataManagerDomain/DataManagerDomain.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Exceptions\ExceptionExistingUserPasswordPair.cs" />
     <Compile Include="Exceptions\ExceptionIncorrectGenerationPasswordType.cs" />
     <Compile Include="Exceptions\ExceptionIncorrectMasterPassword.cs" />
+    <Compile Include="Exceptions\ExceptionUserAlreadyExists.cs" />
     <Compile Include="Exceptions\ExceptionUserDoesNotExist.cs" />
     <Compile Include="Exceptions\ExceptionUsernameContainsSpaces.cs" />
     <Compile Include="Exceptions\ExceptionUserPasswordPairDoesNotExist.cs" />
