--- a/DataManager/DataManagerDomain/DataManagerDomain.csproj
+++ b/DataManager/DataManagerDomain/DataManagerDomain.csproj
@@ -72,6 +72,8 @@
     <Compile Include="Exceptions\ExceptionCreditCardHasExpired.cs" />
     <Compile Include="Exceptions\ExceptionUserPasswordPairIsNotSharedWithAnyone.cs" />
     <Compile Include="IDataBreachesFormatter.cs" />
+    <Compile Include="LeakedCreditCard.cs" />
+    <Compile Include="LeakedPassword.cs" />
     <Compile Include="TextBoxDataBreaches.cs" />
     <Compile Include="PasswordGenerationConditions.cs" />
     <Compile Include="PasswordHandler.cs" />
